--- a/portlet.css
+++ b/portlet.css
@@ -1,10 +1,10 @@
 
 .plugin-gridster.minuteur .front {
-  background: #9CC843 url('images/image00.png') center 34px;
+  background: #B5E655 url('images/image00.png') center 34px;
   background-size:   82px 91px;
   background-repeat: no-repeat;
 }
 
 .plugin-gridster.minuteur .back {
-  background: #9CC843;
+  background: #B5E655;
 }
